
CHANGELOG.txt to track changes to the Omega theme.

##########################################################################################
##### Current Release: 7.x-2.0-beta3
##### Pending changes for Next Release
########################################################################################## 

2/17/2011
=========
#0000000  - Adding an XHTML Starterkit for those that don't want to use HTML5
#0000000  - Make the screenshot.png files in core & starterkits more obvious


##########################################################################################
##### Changes in: 7.x-2.0-beta2
########################################################################################## 

2/16/2011
=========
#1061500  - FIXING: Additional Region Classes not being Applied
#1063780  - Add first/last & zebra classes to the regions in a zone
#1062418  - Zebra class + first/last classes for blocks
#1062780  - PHP warnings when posting a comment

##########################################################################################
##### Changes in: 7.x-2.0-beta2
########################################################################################## 

2/15/2011
=========
#1061500  - Additional Region Classes not being Applied

2/14/2011
=========
#1060732  - Fix E_NOTICE errors
#1061026  - Undefined index: menu_data in include() and missing debug_blocks.js

##########################################################################################
##### Changes in: 7.x-2.0-beta1
########################################################################################## 

2/10/2011 - 2/13/2011
=====================
#0000000  - Fixing template diffs between base & starterkit
#0000000  - Fixing empty h1 in region--content.tpl.php
#0000000  - Removing unmodified core templates in omega/omega/templates
#0000000  - Syncing omega.info and omega_starterkit.info
#1060320  - Starting work on turning zones into a renderable array