@@ -32,6 +32,13 @@ CHANGELOG.txt to track changes to the Omega theme.
 ##### Pending changes for Next Release
 ########################################################################################## 
 
+2/23/2011
+=========
+#1070640  - Make Branding & Menu regions "real" regions
+#1070628  - Restructure Menu Options/Rendering
+#1066444  - Would it be possible to add an "active-trail" class for drop-down menus?
+
+
 2/17/2011
 =========
 #0000000  - Adding an XHTML Starterkit for those that don't want to use HTML5
